--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
+
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("kotlin-parcelize")
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
 
 
 }
@@ -17,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.bregandert.filmsearch"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -33,12 +36,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+
+    buildFeatures {
+        
+        buildConfig = true
+    }
+
 }
 
 dependencies {
@@ -46,9 +55,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
@@ -65,5 +74,12 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
+
+//    dagger
+    implementation 'com.google.dagger:dagger:2.48.1'
+
+    kapt 'com.google.dagger:dagger-compiler:2.48.1'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.48.1'
+
 
 }
