--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,14 @@ plugins {
     id 'kotlin-kapt'
 
 
+
 }
 
 android {
     namespace 'com.bregandert.filmsearch'
     compileSdk 34
 
-    viewBinding {
-        enabled = true
-    }
+
 
     defaultConfig {
         applicationId "com.bregandert.filmsearch"
@@ -44,7 +43,7 @@ android {
     }
 
     buildFeatures {
-        
+        viewBinding = true
         buildConfig = true
     }
 
@@ -52,13 +51,17 @@ android {
 
 dependencies {
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
+    implementation "androidx.fragment:fragment-ktx:1.6.2"
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     testImplementation 'junit:junit:4.13.2'
@@ -68,7 +71,7 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.google.code.gson:gson:2.10.1'
+
 
 //    Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -81,5 +84,9 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.48.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.48.1'
 
+//Room
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
 }
