--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,14 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.48.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.48.1'
 
-//Room
+//  Room
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+//  Coroutines
+    def coroutines_version = '1.6.4'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
 }
