--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,20 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
+
+
+
 
 
 
 }
+
+
+
 
 android {
     namespace 'com.bregandert.filmsearch'
@@ -75,19 +83,21 @@ dependencies {
 
 //    Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
 
 //    dagger
-    implementation 'com.google.dagger:dagger:2.48.1'
+    implementation 'com.google.dagger:dagger:2.49'
 
-    kapt 'com.google.dagger:dagger-compiler:2.48.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.48.1'
+    ksp 'com.google.dagger:dagger-compiler:2.49'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.49'
 
 //  Room
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
 //  Coroutines
     def coroutines_version = '1.6.4'
