--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.devtools.ksp'
 
-
-
-
-
-
 }
-
-
-
 
 android {
     namespace 'com.bregandert.filmsearch'
@@ -82,25 +74,36 @@ dependencies {
 
 
 //    Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    def retrofit_version = '2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+
+//    OkHttp
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
 
 //    dagger
-    implementation 'com.google.dagger:dagger:2.49'
+    implementation 'com.google.dagger:dagger:2.50'
 
-    ksp 'com.google.dagger:dagger-compiler:2.49'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.49'
+    ksp 'com.google.dagger:dagger-compiler:2.50'
+
 
 //  Room
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
+
+//    RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
 
 //  Coroutines
-    def coroutines_version = '1.6.4'
+    def coroutines_version = '1.7.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
