--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,15 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.devtools.ksp'
 
+    id 'androidx.room'
+
+}
+
+apply from: "$project.rootDir/versions.gradle"
+
+// For room: export schema to the path
+room {
+    schemaDirectory "$projectDir/schemas"
 }
 
 android {
@@ -38,6 +47,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
+
     kotlinOptions {
         jvmTarget = '17'
     }
@@ -51,9 +65,6 @@ android {
 
 dependencies {
 
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
-
     implementation "androidx.fragment:fragment-ktx:1.6.2"
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -62,49 +73,35 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    implementation "androidx.viewpager2:viewpager2:1.1.0-beta02"
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.3.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation project(':retrofit') //импортируем retrofit модуль
 
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
-
-//    Retrofit
-    def retrofit_version = '2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
-    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
-
-//    OkHttp
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.12.0"
-
-//    dagger
-    implementation 'com.google.dagger:dagger:2.50'
-
-    ksp 'com.google.dagger:dagger-compiler:2.50'
-
-
-//  Room
-    def room_version = "2.6.1"
-    implementation "androidx.room:room-runtime:$room_version"
-    ksp "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-rxjava3:$room_version"
-
-//    RxJava
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
-    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
-
-//  Coroutines
-    def coroutines_version = '1.7.3'
+    // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // Dagger
+    implementation dagger
+    kapt daggerCompiler
+
+    // Room
+    implementation roomRuntime
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
+    kapt roomCompiler
+
+    // RxJava
+    implementation rxandroid
+    implementation rxjava
+
+     // Tests
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+
+
 
 }
